# criticker-dataset

./: .gitignore  .pre-commit-config.yaml  KAGGLE_README.md  Pipfile  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: build.yml  pythonapp.yml  testing.yml
criticker/: scrapy.cfg  tests.py
criticker/criticker/: items.py  middlewares.py  pipelines.py  settings.py
criticker/criticker/spiders/: games_spider.py  movies_spider.py
criticker_movies/: scrapy.cfg  tests.py
criticker_movies/criticker_movies/: items.py  middlewares.py  pipelines.py  settings.py
criticker_movies/criticker_movies/spiders/: games_spider.py  movies_spider.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/criticker/: games.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/criticker/: games.json
great_expectations/plugins/expectations/: expect_column_values_to_be_valid_urls.py
src/criticker/: items.py  settings.py
src/criticker/spiders/: games_spider.py  movies_spider.py
tests/: conftest.py  test_spider_utils.py
